# AeroRust.github.io

./: .gitignore  .travis.yml  CNAME  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  backgroundOnAeroRust.md  book.toml  categories.json  config.toml  index.html  package.json  robots.txt  search_index.en.js  sitemap.xml  webpack.common.js  webpack.dev.js  webpack.prod.js
.github/ISSUE_TEMPLATE/: featured-blog-post.md
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml  gh-pages.yml
blog/: index.html
blog/aerorust-3-years-birthday/: index.html
blog/archive/: index.html
blog/page/1/: index.html
catalogue/: index.html
catalogue/aerospace-protocols/: index.html
catalogue/aerospace-protocols/page/1/: index.html
catalogue/astrodynamics/: index.html
catalogue/astrodynamics/page/1/: index.html
catalogue/error-correction/: index.html
catalogue/error-correction/page/1/: index.html
catalogue/parsers/: index.html
catalogue/protocols/: index.html
catalogue/robotics/: index.html
catalogue/software-development-kits/: index.html
catalogue/space-protocols/: index.html
catalogue/units-of-measure/: index.html
content/: _index.md
content/blog/: 2022-08-05-AeroRust-2.5-years-later.md  2022-08-05-First-article.md  2023-01-02-AeroRust-3-years-birthday.md  2023-07-04-Nanosatellite-embedded-workshop.md  YYYY-MM-DD-Draft-blog-post.md  _index.md
content/blog/archive/: _index.md
content/catalogue/: _index.md  crates.md
content/events/: space_conference_2024.md
events/space-conference-2024/: index.html
frontend/: bootstrap.js  index.js
frontend/scss/: _custom.scss  main.scss
scraper/: Cargo.toml  config.toml
scraper/src/: config.rs  data.rs  lib.rs  main.rs  scraper.rs
src/: SUMMARY.md  welcome_community.md
templates/: base.html  blog.html  blog_archive.html  blog_post.html  catalogue.html  index.html  space_conference.html
templates/blog/: authors.html
templates/catalogue/: category.html  index.html
templates/macros/: meta.html
templates/partials/: blog_side.html  event_side.html  footer.html  menu.html  pagination.html
templates/shortcodes/: img.html  preview.html  toc.html  youtube.html
(+21 files in other folders)
